--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -19,14 +19,13 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href=""{% url 'login'%}"" class="navbar-brand">My Website</a>
+            <a href="{% url 'login'%}" class="navbar-brand">VideoChat</a>
         </div>
 
         <!-- Menu Items -->
         <div class="collapse navbar-collapse" id="mainNavBar">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="{% url 'login'%}">Home</a></li>
-                <li><a href="{% url 'show_data'%}">Show</a></li>
                 <li><a href="{% url 'logout'%}" >Logout</a></li>
                 <!-- <li><a href="#">Contact</a></li> -->
             </ul>
